styles/explorer.module.css
  .deleteParent {
      float: right;
  }

  .bubble {
    margin: .2rem;
    padding: .2rem;
    color: inherit;
    border: 1px solid #bdbdbd;
    border-radius: 10px;
    display:inline-block;
    /* max-width: 100%; */
    vertical-align: top;
  }

  .bold {
    margin: .2rem .2rem .2rem 0;
    padding: .2rem .2rem .2rem 0;
    font-weight: bold;
    display:inline-block;
    vertical-align: top;
  }

  .align {
    margin: .2rem .2rem .2rem 0;
    padding: .2rem .2rem .2rem 0;
  }

